<resources>
    <string name="app_name">Electricitips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="appliance_types">
        <item>Entertainment</item>
        <item>Lighting</item>
        <item>Cooling</item>
        <item>Kitchen Appliance</item>
        <item>Household Appliance</item>
        <item>Others</item>
    </string-array>
    <string name="links">Links</string>
    <string name="tips">Tips</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string-array name="frequency">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="luzon">LUZON</string>
    <string name="visayas">VISAYAS</string>
    <string name="mindanao">MINDANAO</string>
    <string name="others">OTHERS</string>
    <string name="meralco">MERALCO</string>
    <string name="meralcoFB">https://www.facebook.com/meralco</string>
    <string name="meralcoOS">http://www.meralco.com.ph/</string>
    <string name="veco">VECO</string>
    <string name="vecoFB">https://www.facebook.com/visayanelectriccompany</string>
    <string name="vecoOS">http://www.visayanelectric.com/</string>
    <string name="select_an_electric_utility_distributor_corporation_to_show_their_links">Select an electric utility distributor or a government corporation:</string>
    <string name="dlpc">DLPC</string>
    <string name="dlpcFB">https://www.facebook.com/DavaoLightOfficial</string>
    <string name="dlpcOS">http://www.davaolight.com/</string>
    <string name="davao_light_and_power_company">Davao Light and Power Company</string>
    <string name="visayan_electric_company">Visayan Electric Company</string>
    <string name="manila_electric_company">Manila Electric Company</string>
    <string name="doe">DOE</string>
    <string name="doeFB">https://www.facebook.com/DOEgovph</string>
    <string name="doeOS">https://www.doe.gov.ph/</string>
    <string name="department_of_energy">Department of Energy</string>
    <string name="napocor">NAPOCOR</string>
    <string name="napocorFB">https://www.facebook.com/nationalpowerph</string>
    <string name="napocorOS">https://www.napocor.gov.ph/</string>
    <string name="national_power_corporation">National Power Corporation</string>
    <string name="ngcp">NGCP</string>
    <string name="ngcpFB">https://www.facebook.com/NGCPph</string>
    <string name="ngcpOS">http://www.ngcp.ph/</string>
    <string name="national_grid_corporation_of_the_philippines">National Grid Corporation of the Philippines</string>
    <string name="appliance_name">Appliance Name</string>
    <string name="appliance_type">Appliance Type</string>
    <string name="tipsText">Click on the tips button to know\nmore on saving electricity!</string>
    <string name="tipsBtnText">Tips</string>

    <string-array name="tipsWebsites">
        <item>Tips by DOE</item>
        <item>Tips by Energy Literacy PH</item>
        <item>Energy Efficiency Tips by MERALCO</item>
        <item>No-cost Ways to Save Electricity</item>
        <item>Understanding Energy Labels in Appliances</item>
    </string-array>

</resources>