<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".fragments.Links"
    android:orientation="vertical"
    android:padding="50dp">
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_an_electric_utility_distributor_corporation_to_show_their_links" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="25dp">
            <ImageButton
                android:id="@+id/meralcoIB"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/meralco"
                android:layout_marginTop="25dp"/>
            <TextView
                android:id="@+id/meralcoTV"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/meralco"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/meralcoSub"
                android:layout_width="105dp"
                android:layout_height="30dp"
                android:text="@string/manila_electric_company"
                android:textAlignment="center"
                android:textSize="11sp"
                android:textStyle="italic" />
            <ImageButton
                android:id="@+id/vecoIB"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:src="@drawable/veco"
                android:scaleType="centerInside"
                android:background="@android:color/transparent"
                android:layout_marginTop="25dp"/>
            <TextView
                android:id="@+id/vecoTV"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/veco"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/vecoSub"
                android:layout_width="105dp"
                android:layout_height="30dp"
                android:text="@string/visayan_electric_company"
                android:textAlignment="center"
                android:textSize="11sp"
                android:textStyle="italic" />
            <ImageButton
                android:id="@+id/dlpcIB"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:src="@drawable/dlpc"
                android:scaleType="centerInside"
                android:background="@android:color/transparent"
                android:layout_marginTop="25dp"/>
            <TextView
                android:id="@+id/dlpcTV"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/dlpc"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/dlpcSub"
                android:layout_width="105dp"
                android:layout_height="40dp"
                android:text="@string/davao_light_and_power_company"
                android:textAlignment="center"
                android:textSize="11sp"
                android:textStyle="italic" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="25dp">
        <ImageButton
            android:id="@+id/doeIB"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/doe"
            android:layout_marginTop="25dp"/>
        <TextView
            android:id="@+id/doeTV"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/doe"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/doeSub"
            android:layout_width="105dp"
            android:layout_height="30dp"
            android:text="@string/department_of_energy"
            android:textAlignment="center"
            android:textSize="11sp"
            android:textStyle="italic" />
        <ImageButton
            android:id="@+id/napocorIB"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:src="@drawable/napocor"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:layout_marginTop="25dp"/>
        <TextView
            android:id="@+id/napocorTV"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/napocor"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/napocorSub"
            android:layout_width="105dp"
            android:layout_height="30dp"
            android:text="@string/national_power_corporation"
            android:textAlignment="center"
            android:textSize="11sp"
            android:textStyle="italic" />
        <ImageButton
            android:id="@+id/ngcpIB"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:src="@drawable/ngcp"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:layout_marginTop="25dp"/>
        <TextView
            android:id="@+id/ngcpTV"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/ngcp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/ngcpSub"
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:text="@string/national_grid_corporation_of_the_philippines"
            android:textAlignment="center"
            android:textSize="11sp"
            android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>